Updated FEN class & made some minor changes